fix for header letter spacing in channel lineup

--- a/assets/css/programming_package.css
+++ b/assets/css/programming_package.css
@@ -25,7 +25,7 @@ h5{
     letter-spacing:1px;
 }
 
-.header{
+#container1 .header{
     text-align: center;
     letter-spacing:1px;
 }
